[package]
name = "plugx-input"
version = "0.2.0"
edition = "2021"
description = "simple and flexible data-structure with diff, merge, and validation."
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://crates.io/crates/plugx-input"
documentation = "https://docs.rs/plugx-input"
repository = "https://github.com/plugx-rs/plugx-input"
categories = ["config", "data-structures", "parsing"]
keywords = ["plugin", "config", "configuration", "data-structures"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md", "CONTRIBUTING.md"]

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.52"
anyhow = "1.0.77"
serde = {version = "1.0.193", features = ["derive"]}
log = {version = "0.4.20", default-features = false, optional = true}
tracing = {version = "0.1.40", optional = true}
faccess = {version = "0.2.4", optional = true}
regex = {version = "1.10.2", optional = true}

[features]
default = []
schema = ["dep:faccess", "dep:regex"]
logging = ["dep:log"]
tracing = ["dep:tracing"]

[dev-dependencies]
tracing-subscriber = {version = "0.3.18", features = ["json"]}
env_logger = "0.10.1"
serde_json = "1.0.108"
tempdir = "0.3.7"
