[package]
name = "plugx-input"
version = "1.2.0"
edition = "2024"
description = "simple and flexible data-structure for configuration and state manipulation of plugins."
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://crates.io/crates/plugx-input"
documentation = "https://docs.rs/plugx-input"
repository = "https://github.com/plugx-rs/plugx-input"
categories = ["config", "data-structures", "parsing"]
keywords = ["plugin", "config", "configuration", "data-structures", "state-manipulation"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md", "CONTRIBUTING.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "2.0.18"
serde = {version = "1.0.193", features = ["derive"], optional = true}
rkyv = {version = "0.8.16", optional = true, features = ["std", "alloc", "bytecheck"]}

[features]
default = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dev-dependencies]
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
rkyv = {version = "0.8.16", features = ["std", "alloc", "bytecheck"]}
